:page_with_curl: Changed banner message

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				</div>
 				<div class="banner-main wow bounceInRight animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: bounceInRight;">
 					<h2>A Place of Food</h2>
-					<p>We offer the best meals at the best value. Receive great food and quality service.</p>
+					<p>We give you the best of african and international dishes. Your satisfaction is our concern</p>
 				</div>
 			</div>
 		</div>
