Change the Address of the Website

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 				</div>
 				<div id="contact-box" class="col-md-6 footer-grid">
 					<h3>Get in Touch</h3>
-					<p>Address : Richard McClintock</p>
-					<p>New Street : Letraset sheets</p>
+					<p>Address : George &  Philips</p>
+					<p>Nzekwe CLose : Enugu</p>
 					<p>ph : +123 859 6050</p>
 				</div>
 			  <div class="clearfix"> </div>
