Change contact us

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<div class="container">
 				<div class="we-do-top">
 					<h3 class="wow bounceInLeft animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: bounceInRight;">
-						CONTACT US
+						REACH US 
 					</h3>
 				</div>
 				<div class="box wow bounceInLeft animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.5s; animation-name: bounceInRight;">
