--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					</div>
 					<div class="head-right wow bounceInRight animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: bounceInRight;">
 						<ul>
-							<li><span class="phon"> </span><h4>(234) 812-345-254</h4></li>
+							<li><span class="phon"> </span><h4>(234) 080234567899</h4></li>
 							<li><a href="mailto:infoexample@email.com"><span class="email"> </span>hello@deliciousfood.com</a></li>
 						</ul>
 					</div>
