Added leader msg to the Heading!

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 			<div class="wedo-main">
 				<div class="we-do-top">
 					<h3>WHAT WE OFFER</h3>
+					<h5>What we offer with joy</h5>
 				</div>
+
 				<div class="we-do-bottom">
 					<div class="col-md-3 we-do-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: bounceIn;">
 						<img src="./images/f1.png" alt="">
